@@ -16,3 +16,6 @@
     {% endif %}
 {% endblock advertorial_marker %}
 
+{% block veeseo_div %}
+{% endblock %}
+
